@@ -1,10 +1,10 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Id$
 
 EAPI=5
 
-USE_RUBY="ruby19 ruby20 ruby21"
+USE_RUBY="ruby20 ruby21"
 
 inherit cmake-utils eutils ruby-ng git-r3
 
@@ -43,7 +43,7 @@ all_ruby_prepare() {
 		-outdir scripts/ruby \
 		scripts/openbabel-ruby.i \
 		|| die "Generation of openbabel-ruby.cpp failed"
-	sed 's/void Init_OpenBabel/void Init_openbabel/' -i scripts/ruby/openbabel-ruby.cpp
+	sed 's/void Init_OpenBabel/void Init_openbabel/' -i scripts/ruby/openbabel-ruby.cpp || die
 }
 
 each_ruby_configure() {
