@@ -1,6 +1,10 @@
 # ChangeLog for sci-chemistry/openbabel-ruby
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
+
+  25 Dec 2015; Marius Brehler <marbre@linux.sungazer.de>
+  openbabel-ruby-9999.ebuild:
+  sci-chemistry/openbabel-ruby: Remove ruby19, add missing die
 
   16 Sep 2014; Christoph Junghans <ottxor@gentoo.org>
   openbabel-ruby-9999.ebuild:
